# palfitology

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.html  architecture.json  design.md  examples.md  index.html  pipeline.md
docs/v1/: architecture.html  architecture.json
docs/v2/: architecture.html  architecture.json
examples/: README.md
notebooks/: build_sigma_clip_notebook.py  build_tutorial.py  git_tutorial.ipynb  palfitology_analysis.ipynb  sigma_clip_and_fit.ipynb  sigma_clip_and_fit_jplus.ipynb  tutorial.ipynb
palfitology/src/palfitology/: reconcile.py
scripts/: check_pa_flip.py  check_pa_split.py  check_pa_transform.py  merge_and_reconcile.sh  prepare_chunks.sh  run_fitpa_clipped_array.sh  run_makecutouts_array.sh  run_palfitology.sh  run_palfitology_array.sh  run_palfitology_slurm.sh  submit_all.sh  test_clip_rband.py
src/palfitology/: __init__.py  catalog.py  cli.py  consensus.py  cutouts.py  detect.py  download.py  fit.py  galfit.py  images.py  pipeline.py  plots.py  psf.py  reconcile.py  selection.py
tests/: conftest.py  test_catalog.py  test_cli.py  test_clipped_cutouts.py  test_consensus.py  test_detect.py  test_galfit.py  test_psf.py  test_reconcile.py  test_regenerate_mosaics.py  test_selection.py  test_summarize_cutouts.py  test_summary_mosaic.py  test_use_clipped_cutouts.py
