[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palfitology"
version = "0.3.0.dev0"
description = "PSF-aware position-angle fitting and GALFIT prep for J-PLUS multi-band galaxy cutouts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nischal Acharya", email = "remember.tomorrow02@gmail.com" },
]
keywords = [
    "astronomy",
    "j-plus",
    "galfit",
    "morphology",
    "isophote",
    "position angle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "astropy>=5.3",
    "photutils>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
palfitology = "palfitology.cli:main"

[project.urls]
Homepage = "https://github.com/nisach02/palfitology"
Issues = "https://github.com/nisach02/palfitology/issues"
Repository = "https://github.com/nisach02/palfitology"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
palfitology = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
